# remote-control

./: .gitignore  README.md  app.spec  pyproject.toml
.github/workflows/: build_exe.yml
remote-control/: app.py
